* CustomEntry.cs: fixed ticket creations
* App.xaml:
* Unit.cs:
* Tenant.cs:
* Building.cs:
* APIpaths.cs:
* DataAccess.cs:
* ManageGo.iOS.csproj:
* chevron.png:
* clip_iso.png:
* CreateTicketPage.xaml:
* chevron@2x.png:
* chevron@3x.png:
* TicketDetailsPage.xaml:
* clip_iso@3x.png:
* clip_iso@2x.png:
* Welcomepagemodel.cs:
* CreateTicketPage.xaml.cs:
* ManageGo.Android.csproj:
* EditTicketDetailsView.xaml:
* TakeVideoPageModel.cs:
* MaintenanceTicketsPage.xaml:
* TicketFilterSelectView.xaml:
* clip.png:
* CreateTicketPageModel.cs:
* styles.xml:
* MaintenanceTicketsPage.xaml.cs:
* TicketDetailsPageModel.cs:
* capture_video_play_2.png:
* Resource.designer.cs:
* capture_video_stop_2.png:
* chevron.png:
* clip_iso.png:
* camera_3.png:
* camera_2.png:
* camera_1.png:
* clip.png:
* MaintenanceTicketsPageModel.cs:
* clip.png:
* capture_video_stop_2@2x.png:
* capture_video_stop_2@3x.png:
* capture_video_play_2@2x.png:
* capture_video_play_2@3x.png:
* clip.png:
* chevron.png:
* clip.png:
* chevron.png:
* clip_iso.png:
* camera_3.png:
* camera_2.png:
* camera_1.png:
* camera_2.png:
* camera_1.png:
* camera_3.png:
* clip_iso.png:
* chevron.png:
* camera_2.png:
* clip_iso.png:
* camera_1.png:
* camera_3.png:
* chevron.png:
* clip_iso.png:
* camera_3.png:
* camera_2.png:
* camera_1.png:
* capture_video_play_2.png:
* capture_video_stop_2.png:
* capture_video_stop_2.png:
* capture_video_play_2.png:
* capture_video_stop_2.png:
* capture_video_play_2.png:
* capture_video_stop_2.png:
* capture_video_play_2.png:
* capture_video_play_2.png:
* capture_video_stop_2.png:
* capture_video_stop_2.png:
* capture_video_play_2.png:

--- a/ManageGo.Android/ManageGo.Android.csproj
+++ b/ManageGo.Android/ManageGo.Android.csproj
@@ -293,6 +293,31 @@
     <AndroidResource Include="Resources\drawable-xhdpi\internal_closed.png" />
     <AndroidResource Include="Resources\drawable-xhdpi\internal_open.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\internal_open.png" />
+    <AndroidResource Include="Resources\mipmap-xhdpi\capture_video_play_2.png" />
+    <AndroidResource Include="Resources\mipmap-xhdpi\capture_video_stop_2.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\capture_video_play_2.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\capture_video_stop_2.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\capture_video_play_2.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\capture_video_stop_2.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\capture_video_play_2.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\capture_video_stop_2.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\capture_video_play_2.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\capture_video_stop_2.png" />
+    <AndroidResource Include="Resources\drawable\capture_video_play_2.png" />
+    <AndroidResource Include="Resources\drawable\capture_video_stop_2.png" />
+    <AndroidResource Include="Resources\drawable\chevron.png" />
+    <AndroidResource Include="Resources\drawable\clip_iso.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\chevron.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\clip_iso.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\chevron.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\clip_iso.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\chevron.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\clip_iso.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\chevron.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\clip_iso.png" />
+    <AndroidResource Include="Resources\drawable\camera_1.png" />
+    <AndroidResource Include="Resources\drawable\camera_2.png" />
+    <AndroidResource Include="Resources\drawable\camera_3.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
