* App.xaml.cs: Added tenants page
* Unit.cs:
* ManageGo.csproj:
* Tenant.cs:
* APIpaths.cs:
* TenantsPage.xaml:
* WelcomePage.xaml:
* DataAccess.cs:
* UnitsListPage.xaml:
* MasterMenuPage.xaml:
* TenantsPage.xaml.cs:
* UnitsListPage.xaml.cs:
* BuildingsListPage.xaml:
* BaseDetailPage.cs:
* TenantsPageModel.cs:
* Welcomepagemodel.cs:
* BuildingsListPage.xaml.cs:
* UnitsListPageModel.cs:
* MasterMenuPageModel.cs:
* MaintenanceTicketsPage.xaml:
* TenantFilterSelectView.xaml:
* BuildingsListPageModel.cs:
* TenantFilterSelectView.xaml.cs:

--- a/ManageGo/ManageGo.csproj
+++ b/ManageGo/ManageGo.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -35,10 +35,5 @@
     <Compile Update="Controls\CalendarView.xaml.cs">
       <DependentUpon>CalendarView.xaml</DependentUpon>
     </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="Mono.Android">
-      <HintPath>..\..\..\..\..\Library\Frameworks\Mono.framework\External\xbuild-frameworks\MonoAndroid\v8.1\Mono.Android.dll</HintPath>
-    </Reference>
   </ItemGroup>
 </Project>
