* Roboto-Bold.ttf: Working on UI design
* App.xaml:
* Info.plist:
* CalendarView.cs:
* Calendar.cs:
* LoginPage.xaml:
* WelcomePage.xaml:
* DataAccess.cs:
* SettingsPage.xaml:
* CalendarPage.xaml:
* ManageGo.iOS.csproj:
* CalendarRenderer.cs:
* CalendarEvent.cs:
* PaymentsPage.xaml:
* CustomSwitch.cs:
* StringToBoolConverter.cs:
* MasterMenuPage.xaml:
* checked.png:
* CalendarView.xaml:
* PaymentsPage.xaml.cs:
* CalendarPage.xaml.cs:
* SettingsPage.xaml.cs:
* unchecked.png:
* CustomSwitchRenderer.cs:
* CreateTicketPage.xaml:
* CalendarViewPage.cs:
* CalendarRenderer.cs:
* checked@2x.png:
* checked@3x.png:
* BuildingsListPage.xaml:
* NotificationsPage.xaml:
* CalendarView.xaml.cs:
* Roboto-Thin.ttf:
* unchecked@2x.png:
* unchecked@3x.png:
* CalendarPageModel.cs:
* SettingsPageModel.cs:
* NotificationsPage.xaml.cs:
* filled_circle.png:
* Roboto-Light.ttf:
* CustomSwitchRenderer.cs:
* ManageGo.Android.csproj:
* InfiniteScrollViewSource.cs:
* Roboto-Medium.ttf:
* EditTicketDetailsView.xaml:
* Roboto-Regular.ttf:
* MaintenanceTicketsPage.xaml:
* checked.png:
* AndroidManifest.xml:
* unchecked.png:
* checked.png:
* checked.png:
* checked.png:
* unchecked.png:
* unchecked.png:
* checked.png:
* unchecked.png:
* unchecked.png:

--- a/ManageGo.Android/ManageGo.Android.csproj
+++ b/ManageGo.Android/ManageGo.Android.csproj
@@ -92,6 +92,7 @@
     <Compile Include="SimpleAuthCallbacks.cs" />
     <Compile Include="NestedListView.cs" />
     <Compile Include="PicturePickerImplementation.cs" />
+    <Compile Include="CustomSwitchRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -315,6 +316,14 @@
     <AndroidResource Include="Resources\drawable\camera_1.png" />
     <AndroidResource Include="Resources\drawable\camera_2.png" />
     <AndroidResource Include="Resources\drawable\camera_3.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\checked.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\unchecked.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\checked.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\unchecked.png" />
+    <AndroidResource Include="Resources\drawable\checked.png" />
+    <AndroidResource Include="Resources\drawable\unchecked.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\checked.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\unchecked.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
@@ -338,6 +347,11 @@
     <AndroidAsset Include="Assets\CourierPSStd-Bold.ttf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </AndroidAsset>
+    <AndroidAsset Include="Assets\Roboto-Bold.ttf" />
+    <AndroidAsset Include="Assets\Roboto-Light.ttf" />
+    <AndroidAsset Include="Assets\Roboto-Medium.ttf" />
+    <AndroidAsset Include="Assets\Roboto-Regular.ttf" />
+    <AndroidAsset Include="Assets\Roboto-Thin.ttf" />
   </ItemGroup>
  <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
