* NestedListView.cs: fixed login and getting permissions
* DataAccess.cs:
* CalendarPage.xaml:
* PaymentsPage.xaml:
* ManageGo.iOS.csproj:
* NestedListView.cs:
* UserPermissions.cs:
* CreateTicketPage.xaml:
* TransactionsPage.xaml:
* PaymentFilterView.xaml:
* TicketDetailsPage.xaml:
* NestedListViewRenderer.cs:
* EditTicketDetailsView.xaml:
* LoggedInUserPermissions.cs:
* TenantFilterSelectView.xaml:
* TicketFilterSelectView.xaml:
* TransactionsFilterPage.xaml:

--- a/ManageGo.iOS/ManageGo.iOS.csproj
+++ b/ManageGo.iOS/ManageGo.iOS.csproj
@@ -119,6 +119,7 @@
     <Compile Include="BorderlessEditor.cs" />
     <Compile Include="PicturePickerImplementation.cs" />
     <Compile Include="CustomSwitchRenderer.cs" />
+    <Compile Include="NestedListViewRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
