--- a/ManageGo.Android/packages.config
+++ b/ManageGo.Android/packages.config
@@ -1,9 +1,35 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FreshMvvm" version="2.2.4" targetFramework="monoandroid90" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="monoandroid90" />
   <package id="Plugin.CurrentActivity" version="2.1.0.4" targetFramework="monoandroid90" />
   <package id="Plugin.Permissions" version="3.0.0.12" targetFramework="monoandroid90" />
   <package id="SkiaSharp" version="1.68.0" targetFramework="monoandroid90" />
-  <package id="Xamarin.Android.Support.Annotations" version="25.4.0.2" targetFramework="monoandroid90" />
-  <package id="Xamarin.Android.Support.Compat" version="25.4.0.2" targetFramework="monoandroid90" />
-  <package id="Xamarin.Android.Support.Core.Utils" version="25.4.0.2" targetFramework="monoandroid90" />
+  <package id="SkiaSharp.Views" version="1.68.0" targetFramework="monoandroid90" />
+  <package id="SkiaSharp.Views.Forms" version="1.68.0" targetFramework="monoandroid90" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="monoandroid90" />
+  <package id="Xam.Plugin.Media" version="4.0.1.5" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Arch.Core.Common" version="1.0.0.1" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Arch.Lifecycle.Common" version="1.0.3.1" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Arch.Lifecycle.Runtime" version="1.0.3.1" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="27.0.2.1" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Support.Annotations" version="27.0.2.1" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Support.Compat" version="27.0.2.1" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Support.Core.UI" version="27.0.2.1" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Support.Core.Utils" version="27.0.2.1" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Support.CustomTabs" version="27.0.2.1" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Support.Design" version="27.0.2.1" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Support.Fragment" version="27.0.2.1" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Support.Media.Compat" version="27.0.2.1" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Support.Transition" version="27.0.2.1" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Support.v4" version="27.0.2.1" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="27.0.2.1" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Support.v7.CardView" version="27.0.2.1" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Support.v7.MediaRouter" version="27.0.2.1" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Support.v7.Palette" version="27.0.2.1" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Support.v7.RecyclerView" version="27.0.2.1" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Support.Vector.Drawable" version="27.0.2.1" targetFramework="monoandroid90" />
+  <package id="Xamarin.Essentials" version="1.0.0" targetFramework="monoandroid90" />
+  <package id="Xamarin.Forms" version="3.3.0.912540" targetFramework="monoandroid90" />
+  <package id="Xamarin.Plugin.FilePicker" version="2.0.135" targetFramework="monoandroid90" />
 </packages>
