* ManageGo.Android.csproj: fixes #3
* App.xaml.cs:
* ManageGo.csproj:
* DataAccess.cs:
* PaymentsPage.xaml:
* MGRangePicker.cs:
* MasterMenuPage.xaml:
* PaymentFilterView.xaml:
* PaymentsPageModel.cs:
* TenantFilterSelectView.xaml:
* TicketFilterSelectView.xaml:
* TransactionsFilterPage.xaml:
* AssemblyInfo.cs:
* AndroidManifest.xml:
* PaymentsRequestParamContainer.cs:
* MaintenanceTicketsPageModel.cs:

--- a/ManageGo.Android/ManageGo.Android.csproj
+++ b/ManageGo.Android/ManageGo.Android.csproj
@@ -29,17 +29,19 @@
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+<RunCodeAnalysis>true</RunCodeAnalysis><LangVersion>Latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>pdbonly</DebugType>
+    <DebugType></DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AndroidManagedSymbols>true</AndroidManagedSymbols>
     <AndroidUseSharedRuntime>false</AndroidUseSharedRuntime>
-    <EnableProguard>true</EnableProguard>
+    <AndroidLinkMode>SdkOnly</AndroidLinkMode>
+<RunCodeAnalysis>true</RunCodeAnalysis><AndroidCreatePackagePerAbi>true</AndroidCreatePackagePerAbi>
+<LangVersion>Latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Xamarin.Android.Support.Design" Version="28.0.0" />
