* ManageGo.Android.csproj: more fixes
* App.xaml.cs:
* Unit.cs:
* ManageGo.csproj:
* Tenant.cs:
* Comments.cs:
* TenantsPage.xaml:
* DataAccess.cs:
* PaymentsPage.xaml:
* UnitsListPage.xaml:
* CreateTicketPage.xaml:
* TransactionsPage.xaml:
* TicketDetailsPage.xaml:
* BuildingsListPage.xaml:
* LoginPageModel.cs:
* TenantsPageModel.cs:
* PaymentsPageModel.cs:
* FeedbackPageModel.cs:
* UnitsListPageModel.cs:
* MasterMenuPageModel.cs:
* MaintenanceTicketsPage.xaml:
* CreateTicketPageModel.cs:
* TransactionsPageModel.cs:
* BuildingsListPageModel.cs:
* AndroidManifest.xml:
* MaintenanceTicketsPageModel.cs:
* RequestEnums.cs:
* TicketRequestItem.cs:
* TenantRequestItem.cs:
* PaymentsRequestItem.cs:
* TransactionsRequestItem.cs:

--- a/ManageGo.Android/ManageGo.Android.csproj
+++ b/ManageGo.Android/ManageGo.Android.csproj
@@ -23,7 +23,7 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
-    <DebugType>portable</DebugType>
+    <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug</OutputPath>
     <DefineConstants>DEBUG;</DefineConstants>
@@ -32,7 +32,6 @@
 <RunCodeAnalysis>true</RunCodeAnalysis><LangVersion>Latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType></DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release</OutputPath>
     <ErrorReport>prompt</ErrorReport>
