--- a/ManageGo/ManageGo.csproj
+++ b/ManageGo/ManageGo.csproj
@@ -15,6 +15,7 @@
     <Folder Include="Services\" />
     <Folder Include="Controls\" />
     <Folder Include="Models\" />
+    <Folder Include="Models\RequestParameterItems\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Services.cs" />
