--- a/ManageGo.iOS/Info.plist
+++ b/ManageGo.iOS/Info.plist
@@ -5,7 +5,6 @@
 	<key>UIDeviceFamily</key>
 	<array>
 		<integer>1</integer>
-		<integer>2</integer>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
@@ -21,17 +20,15 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>MinimumOSVersion</key>
-	<string>8.0</string>
+	<string>11.0</string>
 	<key>CFBundleDisplayName</key>
 	<string>ManageGo</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.ManageGo.ManageGo</string>
-	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>com.ManageGo.ManageGoPMC</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>CFBundleName</key>
-	<string>ManageGo</string>
+	<string>ManageGo - Landlord App</string>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcon.appiconset</string>
 	<key>NSAppTransportSecurity</key>
@@ -61,5 +58,13 @@
 	</array>
 	<key>NSFaceIDUsageDescription</key>
 	<string>ManageGO needs Face ID to log in</string>
+	<key>CFBundleShortVersionString</key>
+	<string>1.0</string>
+	<key>CFBundleVersion</key>
+	<string>1.0</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>ManageGo needs access to location to function.</string>
+	<key>NSLocationWhenInUseUsageDescription </key>
+	<string>ManageGo needs access to location to function.</string>
 </dict>
 </plist>
