--- a/ManageGo.iOS/Info.plist
+++ b/ManageGo.iOS/Info.plist
@@ -66,5 +66,11 @@
 	<string>ManageGo needs access to location to function.</string>
 	<key>NSLocationWhenInUseUsageDescription </key>
 	<string>ManageGo needs access to location to function.</string>
+	<key>UIStatusBarHidden</key>
+	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 </dict>
 </plist>
