--- a/ManageGo.iOS/ManageGo.iOS.csproj
+++ b/ManageGo.iOS/ManageGo.iOS.csproj
@@ -126,6 +126,7 @@
     <Compile Include="PicturePickerImplementation.cs" />
     <Compile Include="CustomSwitchRenderer.cs" />
     <Compile Include="NestedListViewRenderer.cs" />
+    <Compile Include="GoogleCloudMessagingHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
@@ -155,11 +156,17 @@
     <PackageReference Include="SkiaSharp.Views">
       <Version>1.68.0</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms">
-      <Version>3.6.0.220655</Version>
-    </PackageReference>
     <PackageReference Include="Xamarin.Essentials">
       <Version>1.1.0</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Forms">
+      <Version>4.0.0.482894</Version>
+    </PackageReference>
+    <PackageReference Include="FreshMvvm">
+      <Version>3.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Firebase.iOS.CloudMessaging">
+      <Version>3.1.2</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
@@ -379,6 +386,7 @@
     <BundleResource Include="Resources\filled_circle.png" />
     <BundleResource Include="Resources\checked.png" />
     <BundleResource Include="Resources\unchecked.png" />
+    <BundleResource Include="GoogleService-Info.plist" />
   </ItemGroup>
   <ItemGroup>
     <ITunesArtwork Include="iTunesArtwork%402x" />
