--- a/ManageGo/ManageGo.csproj
+++ b/ManageGo/ManageGo.csproj
@@ -29,15 +29,18 @@
     
     <PackageReference Include="SkiaSharp" Version="1.68.0" />
     <PackageReference Include="SkiaSharp.Views.Forms" Version="1.68.0" />
-    <PackageReference Include="PropertyChanged.Fody" Version="2.6.0" />
+    <PackageReference Include="PropertyChanged.Fody" Version="3.0.1" />
     <PackageReference Include="Xam.Plugin.Media" Version="4.0.1.5" />
     <PackageReference Include="Plugin.Permissions" Version="3.0.0.12" />
     <PackageReference Include="Xamarin.Plugin.FilePicker" Version="2.0.135" />
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
-    <PackageReference Include="Xamarin.Forms" Version="3.6.0.220655" />
+    <PackageReference Include="Xamarin.Forms" Version="4.0.0.482894" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="2.0.0" />
     <PackageReference Include="FreshMvvm" Version="3.0.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
-    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="1.13.2" />
-    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="1.13.2" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MGDataAccessLibrary\MGDataAccessLibrary.csproj" />
   </ItemGroup>
 </Project>
