* App.xaml.cs: * AppDelegate.cs: * DataAccess.cs: * ManageGo.iOS.csproj: * MainActivity.cs: * SettingsPage.xaml: * SplashActivity.cs: * SettingsPage.xaml.cs: * SignedInUserInfo.cs: * google-services.json: * PushNotificationType.cs: * ManageGo.Android.csproj: * MyFirebaseIIDService.cs: * SettingsPageModel.cs: * MasterMenuPageModel.cs: * google-services-test.json: * GoogleCloudMessagingHelper.cs: * PushNotificationMessage.cs: * ApiEndPoint.cs: * MyFirebaseMessagingService.cs: * SignedInUserInfo.cs: * Resource.designer.cs: * UserProcessor.cs: * notification_icon.png:
* GoogleCloudMessagingHelper.cs: added push notifications

--- a/ManageGo.Android/ManageGo.Android.csproj
+++ b/ManageGo.Android/ManageGo.Android.csproj
@@ -337,6 +337,7 @@
     <AndroidResource Include="Resources\drawable-hdpi\unchecked.png" />
     <AndroidResource Include="Resources\drawable\switch_track_custom.xml" />
     <AndroidResource Include="Resources\Color\color.xml" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\notification_icon.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
@@ -374,7 +375,6 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <GoogleServicesJson Include="google-services-test.json" />
     <GoogleServicesJson Include="google-services.json" />
   </ItemGroup>
  <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
