* GoogleCloudMessagingHelper.cs: fixed payment filter cnt
* App.xaml.cs:
* AppDelegate.cs:
* MainActivity.cs:
* PaymentsPage.xaml:
* ManageGo.iOS.csproj:
* SettingsPage.xaml:
* SettingsPage.xaml.cs:
* GoogleService-Info-3.plist:
* Welcomepagemodel.cs:
* PaymentsPageModel.cs:
* ManageGo.Android.csproj:
* GoogleCloudMessagingHelper.cs:
* MyFirebaseMessagingService.cs:
* Resource.designer.cs:
* AndroidManifest.xml:
* not_icon_white.png:
* not_icon_white.png:
* not_icon_white.png:
* not_icon_white.png:
* notification_icon.png:
* notification_icon.png:
* notification_icon.png:
* notification_icon.png:

--- a/ManageGo.Android/ManageGo.Android.csproj
+++ b/ManageGo.Android/ManageGo.Android.csproj
@@ -338,6 +338,13 @@
     <AndroidResource Include="Resources\drawable\switch_track_custom.xml" />
     <AndroidResource Include="Resources\Color\color.xml" />
     <AndroidResource Include="Resources\drawable-xxhdpi\notification_icon.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\notification_icon.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\notification_icon.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\notification_icon.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\not_icon_white.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\not_icon_white.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\not_icon_white.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\not_icon_white.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
