--- a/ManageGo.Android/Properties/AndroidManifest.xml
+++ b/ManageGo.Android/Properties/AndroidManifest.xml
@@ -22,5 +22,6 @@
 				<category android:name="${applicationId}" />
 			</intent-filter>
 		</receiver>
+		<meta-data android:name="com.google.firebase.messaging.default_notification_icon" android:resource="@drawable/not_icon_white" />
 	</application>
 </manifest>
