* ManageGo.Android.csproj: added access granted
* ManageGo.csproj:
* MGLabel.cs:
* MGLabelRenderer.cs:
* ManageGo.iOS.csproj:
* AccessPetType.cs:
* TicketDetails.cs:
* MGLabelRenderer.cs:
* AccessGrantedDates.cs:
* TicketDetailsPage.xaml:
* AccessGrantedObject.cs:
* TicketDetailsPageModel.cs:

--- a/ManageGo.Android/ManageGo.Android.csproj
+++ b/ManageGo.Android/ManageGo.Android.csproj
@@ -103,6 +103,7 @@
     <Compile Include="MyFirebaseIIDService.cs" />
     <Compile Include="GoogleCloudMessagingHelper.cs" />
     <Compile Include="MyFirebaseMessagingService.cs" />
+    <Compile Include="MGLabelRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
