--- a/ManageGo/ManageGo.csproj
+++ b/ManageGo/ManageGo.csproj
@@ -39,6 +39,7 @@
     <PackageReference Include="Microsoft.AppCenter.Crashes" Version="2.0.0" />
     <PackageReference Include="Microsoft.AppCenter.Analytics" Version="2.0.0" />
     <PackageReference Include="FreshMvvm" Version="3.0.0" />
+    <PackageReference Include="LiveXAML" Version="2.1.72" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MGDataAccessLibrary\MGDataAccessLibrary.csproj" />
