* ManageGo.Android.csproj: fixed issues
* ManageGo.csproj:
* CustomEntry.cs:
* ManageGo.iOS.csproj:
* check@2x.png:
* check@3x.png:
* TicketDetailsPage.xaml:
* MaintenanceTicketsPage.xaml:
* TicketDetailsPageModel.cs:
* check.png:
* check.png:
* check@3x.png:
* ToggleToChevronRotationConverter.cs:

--- a/ManageGo.Android/ManageGo.Android.csproj
+++ b/ManageGo.Android/ManageGo.Android.csproj
@@ -346,6 +346,9 @@
     <AndroidResource Include="Resources\drawable-xhdpi\not_icon_white.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\not_icon_white.png" />
     <AndroidResource Include="Resources\drawable-xxxhdpi\not_icon_white.png" />
+    <AndroidResource Include="Resources\mipmap-xxhdpi\check%403x.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\check.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\check.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
