--- a/ManageGo.Android/ManageGo.Android.csproj
+++ b/ManageGo.Android/ManageGo.Android.csproj
@@ -104,6 +104,7 @@
     <Compile Include="GoogleCloudMessagingHelper.cs" />
     <Compile Include="MyFirebaseMessagingService.cs" />
     <Compile Include="MGLabelRenderer.cs" />
+    <Compile Include="AppStoreOpenerImplementation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -348,6 +349,22 @@
     <AndroidResource Include="Resources\drawable-xxxhdpi\not_icon_white.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\check.png" />
     <AndroidResource Include="Resources\drawable-xhdpi\check.png" />
+    <AndroidResource Include="Resources\mipmap-xxxhdpi\awaiting_response.png">
+      <SubType></SubType>
+      <Generator></Generator>
+    </AndroidResource>
+    <AndroidResource Include="Resources\mipmap-xxhdpi\awaiting_response.png">
+      <SubType></SubType>
+      <Generator></Generator>
+    </AndroidResource>
+    <AndroidResource Include="Resources\drawable-xhdpi\awaiting_response.png">
+      <SubType></SubType>
+      <Generator></Generator>
+    </AndroidResource>
+    <AndroidResource Include="Resources\drawable-hdpi\awaiting_response.png">
+      <SubType></SubType>
+      <Generator></Generator>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
