--- a/ManageGo.iOS/ManageGo.iOS.csproj
+++ b/ManageGo.iOS/ManageGo.iOS.csproj
@@ -56,7 +56,7 @@
     <CodesignKey>iPhone Developer: Hani Ebrahimi (RC3GWVX7G2)</CodesignKey>
     <MtouchDebug>true</MtouchDebug>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
-    <CodesignProvision>VS: com.ManageGo.ManageGoPMC Development</CodesignProvision>
+    <CodesignProvision>iOS Team Provisioning Profile: com.ManageGo.ManageGoPMC</CodesignProvision>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
     <DebugType>none</DebugType>
@@ -128,6 +128,7 @@
     <Compile Include="NestedListViewRenderer.cs" />
     <Compile Include="GoogleCloudMessagingHelper.cs" />
     <Compile Include="MGLabelRenderer.cs" />
+    <Compile Include="AppStoreOpenerImplementation.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
@@ -161,7 +162,7 @@
       <Version>1.1.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms">
-      <Version>4.0.0.482894</Version>
+      <Version>4.1.0.581479</Version>
     </PackageReference>
     <PackageReference Include="FreshMvvm">
       <Version>3.0.0</Version>
@@ -391,6 +392,9 @@
     <BundleResource Include="GoogleService-Info-3.plist" />
     <BundleResource Include="Resources\check%402x.png" />
     <BundleResource Include="Resources\check%403x.png" />
+    <BundleResource Include="Resources\awaiting_response.png" />
+    <BundleResource Include="Resources\awaiting_response%402x.png" />
+    <BundleResource Include="Resources\awaiting_response%403x.png" />
   </ItemGroup>
   <ItemGroup>
     <ITunesArtwork Include="iTunesArtwork%402x" />
