--- a/MGDataAccessLibrary/MGDataAccessLibrary.csproj
+++ b/MGDataAccessLibrary/MGDataAccessLibrary.csproj
@@ -21,4 +21,7 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="Models\EventCreateItem.config" />
+  </ItemGroup>
 </Project>
