* ManageGo.Android.csproj: almost done with fixes
* App.xaml.cs:
* iTunesArtwork@2x:
* LoginPage.xaml:
* PaymentsPage.xaml:
* ManageGo.iOS.csproj:
* TransactionsPage.xaml:
* LoginPageModel.cs:
* PaymentFilterView.xaml:
* TenantsPageModel.cs:
* PaymentsPageModel.cs:
* WebAPI.cs:
* SettingsPageModel.cs:
* TenantFilterSelectView.xaml:
* TicketFilterSelectView.xaml:
* TransactionsFilterPage.xaml:
* TransactionsPageModel.cs:
* NotificationsPageModel.cs:
* PaymentStatusOverwrite.cs:
* AndroidManifest.xml:
* Resource.designer.cs:
* ic_launcher.png:
* UserProcessor.cs:
* 40.png:
* 80.png:
* 87.png:
* 60.png:
* 58.png:
* 120.png:
* 180.png:
* ic_launcher.png:
* 1024.png:
* 40-1.png:
* 40-2.png:
* 58-1.png:
* 80-1.png:
* 87-1.png:
* 180-1.png:
* 120-2.png:
* 120-1.png:
* ic_launcher.png:
* ic_launcher.png:
* icon_80.png:
* icon_60.png:
* icon_58.png:
* icon_40.png:
* icon_87.png:
* ic_launcher.png:
* icon_180.png:
* Contents.json:
* AppIcon40x40@3x.png:
* AppIcon60x60@2x.png:
* app_icon_1024-01.png:

--- a/ManageGo.Android/Properties/AndroidManifest.xml
+++ b/ManageGo.Android/Properties/AndroidManifest.xml
@@ -10,7 +10,7 @@
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-feature android:name="android.hardware.camera.autofocus" />
-	<application android:label="ManageGo" android:icon="@drawable/icon">
+	<application android:label="ManageGo" android:icon="@drawable/ic_launcher">
 		<provider android:name="android.support.v4.content.FileProvider" android:authorities="${applicationId}.ManageGo.pcm" android:exported="false" android:grantUriPermissions="true">
 			<meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths"></meta-data>
 		</provider>
