--- a/ManageGo.iOS/GoogleService-Info.plist
+++ b/ManageGo.iOS/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>348916857413-n586oe1qeu8q3h1e2rspplc4kdbohlud.apps.googleusercontent.com</string>
+	<string>374051473512-hckrk5ko72njel2n86eq126q6514n7t8.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.348916857413-n586oe1qeu8q3h1e2rspplc4kdbohlud</string>
+	<string>com.googleusercontent.apps.374051473512-hckrk5ko72njel2n86eq126q6514n7t8</string>
 	<key>API_KEY</key>
-	<string>AIzaSyDWkcyeDDkYmoZgiu7nJ0XStR4wQvRa9GU</string>
+	<string>AIzaSyA1ITPG8OYvjqddXKZWRcBAxpmxATeyTKU</string>
 	<key>GCM_SENDER_ID</key>
-	<string>348916857413</string>
+	<string>374051473512</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.ManageGo.ManageGoPMC</string>
 	<key>PROJECT_ID</key>
-	<string>mg-uat-64d49</string>
+	<string>tenant-app-notifications</string>
 	<key>STORAGE_BUCKET</key>
-	<string>mg-uat-64d49.appspot.com</string>
+	<string>tenant-app-notifications.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,8 +29,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:348916857413:ios:775db074ada0fc5a</string>
+	<string>1:374051473512:ios:775db074ada0fc5a</string>
 	<key>DATABASE_URL</key>
-	<string>https://mg-uat-64d49.firebaseio.com</string>
+	<string>https://tenant-app-notifications.firebaseio.com</string>
 </dict>
 </plist>
