--- a/ManageGo.iOS/ManageGo.iOS.csproj
+++ b/ManageGo.iOS/ManageGo.iOS.csproj
@@ -57,6 +57,11 @@
     <MtouchDebug>true</MtouchDebug>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
     <CodesignProvision>VS: WildCard Development</CodesignProvision>
+<DeviceSpecificBuild>false</DeviceSpecificBuild>
+<MtouchSdkVersion>12.4</MtouchSdkVersion>
+<MtouchFloat32>true</MtouchFloat32>
+<OptimizePNGs></OptimizePNGs>
+<MtouchEnableSGenConc>true</MtouchEnableSGenConc>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
     <DebugType>none</DebugType>
@@ -66,9 +71,13 @@
     <WarningLevel>4</WarningLevel>
     <MtouchArch>ARM64</MtouchArch>
     <ConsolePause>false</ConsolePause>
-    <CodesignKey>iPhone Distribution: MANAGEGO LLC (4GH47MZ6ZW)</CodesignKey>
+    <CodesignKey>iPhone Developer: Hani Ebrahimi (RC3GWVX7G2)</CodesignKey>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
-    <CodesignProvision>ManageGo LanLord Dist</CodesignProvision>
+    <CodesignProvision>VS: WildCard Development</CodesignProvision>
+    <MtouchSdkVersion>12.4</MtouchSdkVersion>
+    <MtouchUseLlvm>true</MtouchUseLlvm>
+    <MtouchFloat32>true</MtouchFloat32>
+    <MtouchEnableSGenConc>true</MtouchEnableSGenConc>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Ad-Hoc|iPhone' ">
     <DebugType>none</DebugType>
@@ -125,7 +134,7 @@
     <Compile Include="BorderlessEditor.cs" />
     <Compile Include="PicturePickerImplementation.cs" />
     <Compile Include="CustomSwitchRenderer.cs" />
-    <Compile Include="NestedListViewRenderer.cs" />
+    <Compile Include="CustomListViewRenderer.cs" />
     <Compile Include="GoogleCloudMessagingHelper.cs" />
     <Compile Include="MGLabelRenderer.cs" />
     <Compile Include="AppStoreOpenerImplementation.cs" />
@@ -166,10 +175,10 @@
       <Version>1.68.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Essentials">
-      <Version>1.2.0</Version>
+      <Version>1.3.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms">
-      <Version>4.1.0.673156</Version>
+      <Version>4.2.0.778463</Version>
     </PackageReference>
     <PackageReference Include="FreshMvvm">
       <Version>3.0.0</Version>
@@ -395,13 +404,13 @@
     <BundleResource Include="Resources\filled_circle.png" />
     <BundleResource Include="Resources\checked.png" />
     <BundleResource Include="Resources\unchecked.png" />
-    <BundleResource Include="GoogleService-Info.plist" />
     <BundleResource Include="GoogleService-Info-3.plist" />
     <BundleResource Include="Resources\check%402x.png" />
     <BundleResource Include="Resources\check%403x.png" />
     <BundleResource Include="Resources\awaiting_response.png" />
     <BundleResource Include="Resources\awaiting_response%402x.png" />
     <BundleResource Include="Resources\awaiting_response%403x.png" />
+    <BundleResource Include="GoogleService-Info.plist" />
   </ItemGroup>
   <ItemGroup>
     <ITunesArtwork Include="iTunesArtwork%402x" />
