--- a/ManageGo.iOS/ManageGo.iOS.csproj
+++ b/ManageGo.iOS/ManageGo.iOS.csproj
@@ -58,10 +58,11 @@
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
     <CodesignProvision>VS: WildCard Development</CodesignProvision>
 <DeviceSpecificBuild>false</DeviceSpecificBuild>
-<MtouchSdkVersion>12.4</MtouchSdkVersion>
+<MtouchSdkVersion>13.0</MtouchSdkVersion>
 <MtouchFloat32>true</MtouchFloat32>
 <OptimizePNGs></OptimizePNGs>
 <MtouchEnableSGenConc>true</MtouchEnableSGenConc>
+<MtouchLink>None</MtouchLink>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
     <DebugType>none</DebugType>
@@ -74,7 +75,7 @@
     <CodesignKey>iPhone Developer: Hani Ebrahimi (RC3GWVX7G2)</CodesignKey>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
     <CodesignProvision>VS: WildCard Development</CodesignProvision>
-    <MtouchSdkVersion>12.4</MtouchSdkVersion>
+    <MtouchSdkVersion>13.0</MtouchSdkVersion>
     <MtouchUseLlvm>true</MtouchUseLlvm>
     <MtouchFloat32>true</MtouchFloat32>
     <MtouchEnableSGenConc>true</MtouchEnableSGenConc>
