--- a/ManageGo.Android/ManageGo.Android.csproj
+++ b/ManageGo.Android/ManageGo.Android.csproj
@@ -36,7 +36,9 @@
         <AndroidUseSharedRuntime>true</AndroidUseSharedRuntime>
         <AndroidSupportedAbis>x86_64</AndroidSupportedAbis>
         <AndroidUseAapt2>false</AndroidUseAapt2>
-    </PropertyGroup>
+
+<RunCodeAnalysis>true</RunCodeAnalysis>    </PropertyGroup>
+
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
         <DebugType></DebugType>
         <Optimize>true</Optimize>
@@ -50,7 +52,9 @@
         <AndroidSupportedAbis>armeabi-v7a;arm64-v8a</AndroidSupportedAbis>
         <AndroidEnableMultiDex>true</AndroidEnableMultiDex>
         <AndroidLinkMode>SdkOnly</AndroidLinkMode>
-    </PropertyGroup>
+
+<RunCodeAnalysis>true</RunCodeAnalysis>    </PropertyGroup>
+
     <ItemGroup>
         <PackageReference Include="Xamarin.Android.Support.Design" Version="28.0.0.1" />
         <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="28.0.0.1" />
